[package]
name = "boot-time"
description = "Monotonic time that takes into account time a system was suspended (if the system supports this)"
version = "0.1.2"
authors = ["Rinat Shigapov <rinatshigapov@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/DXist/boot-time"
license = "MIT"
keywords = ["time", "monotonic", "duration"]
categories = ["date-and-time"]

[dependencies]
cfg-if = "1"

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"
